More styling updates

--- a/Client/Pages/AboutPage.razor
+++ b/Client/Pages/AboutPage.razor
@@ -1,39 +1,139 @@
 ﻿@page "/about"
 
-<div>
-    <div>
-        <div>
-            <div>
-                <main>
-                    <article>
-                        <header>
-                            <span>February 10, 2022</span>
-                            <h1>About</h1>
-                        </header><!-- .entry-header -->
-                        <div>
-                            <div>
-                                <section>
-                                    <div>
-                                        <div>
-                                            <div>
-                                                <div>
-                                                    <div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </section>
-                                <section>
-                                    <h1>Get to know Steve</h1><p><span data-contrast="auto">Steve Bratcher is a Republican Candidate for Kentucky State House of Representatives in the 25th District. Steve has lived in Elizabethtown with his wife, Cindy, for more than 20 years.&nbsp; He also is father to two amazing daughters, Tori and Paige. His diversity, experience, and education will help him to be a Representative that makes sound judgements for the people he serves.&nbsp;</span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335559739&quot;:160,&quot;335559740&quot;:259}">&nbsp;</span></p><p><b><span data-contrast="auto">Work Experience</span></b><span data-contrast="auto">: Steve currently serves as Director of External Technical Training at Elizabethtown Community and Technical College where he also teaches business and technical classes. Most recently, he developed the Computer Coding Academy as well as training and development for new organizations moving to the area.&nbsp; As a college educator, he has a passion for helping people achieve their goals and developing small business. Steve has worked at senior levels in both the automotive and bourbon industries. Being a real estate broker and owing a real estate business Steve understands the challenges that small business face. He is a Human Resources Senior Certified Professional (SCP) and holds a private pilot’s license. Steve has diverse work background that will help him to understand the many different facets needed to be a Representative.</span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335559739&quot;:160,&quot;335559740&quot;:259}">&nbsp;</span></p><p><b><span data-contrast="auto">Community Servant</span></b><span data-contrast="auto">: Steve believes that our community is better when we all work to help and serve those around us.&nbsp; He has a long history of doing just that. Serving the community, he coached youth soccer for many years helping kids to learn and enjoy the game. He has volunteered for Feeding America. coaching Youth Soccer, and serving on the high school Site Based Council to try to help impact education for our students and teachers. Steve serves as a Constable and has been elected for the last 3 election cycles. Steve passionately serves on the Habitat for Humanity Board of Directors in an effort to help bring the American dream of owning a home to more in our community.&nbsp;</span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335559739&quot;:160,&quot;335559740&quot;:259}">&nbsp;</span></p><p><b><span data-contrast="auto">Education</span></b><span data-contrast="auto">: Steve holds two master’s degrees, with one being an Executive Master of Business Administration (EMBA) from Bellarmine University and the other, being a Master of Science from Eastern Kentucky University.&nbsp; It was at EKU where he also earned a Bachelor of Arts degree. Additionally, Steve also holds two associate technical degrees.&nbsp;</span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335559739&quot;:160,&quot;335559740&quot;:259}">&nbsp;</span></p><p><b><span data-contrast="auto">Military Service</span></b><span data-contrast="auto">: Steve’s Military background is extensive with over four years of active duty in the Air Force and over 30 years in the Kentucky Air National Guard, where he presently still serves as a Senior Non-Commissioned Officer. Steve has responded to the call on numerous occasions including on September 11 for homeland defense and Iraqi Freedom. He is a decorated Airman with multiple awards, medals, and citations including one with valor. Steve has experience with both foreign and domestic operations.</span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335559739&quot;:160,&quot;335559740&quot;:259}">&nbsp;</span></p>
-                                </section>
-                            </div>
-                        </div><!-- .entry-content -->
-                    </article><!-- #post-## -->
-                </main><!-- #main -->
-            </div><!-- #primary -->
+<div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-bg-1.jpg);">
+    <div class="container-fluid page-header-inner py-5">
+        <div class="container text-center">
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Meet Steve</h1>
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb justify-content-center text-uppercase">
+                    <li class="breadcrumb-item"><a href="/">Home</a></li>
+                    <li class="breadcrumb-item text-white active" aria-current="page">About</li>
+                </ol>
+            </nav>
         </div>
-    </div><!-- .container -->
+    </div>
+</div>
+<!-- Page Header End -->
 
-
-</div><!-- .site-content -->
+<!-- About Start -->
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="row g-5">
+            <div class="col-lg-6" style="min-height: 400px;">
+                <div class="position-relative h-100 wow fadeIn" data-wow-delay="0.1s">
+                    <img class="position-absolute img-fluid w-100 h-100" src="img/steve.jpg" style="object-fit:cover" alt="">
+                </div>
+            </div>
+            <div class="service col-lg-6">
+                <h6 class="text-primary text-uppercase">// Elect //</h6>
+                <h1 class="mb-4"><span class="text-primary">Steve Bratcher</span> for State Rep</h1>
+                <p class="mb-3">Steve Bratcher is a Republican Candidate for Kentucky State House of Representatives in the 25th District. Steve has lived in Elizabethtown with his wife, Cindy, for more than 20 years.  He also is father to two amazing daughters, Tori and Paige. His diversity, experience, and education will help him to be a Representative that makes sound judgements for the people he serves.</p>
+                <div class="row g-4 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="col-lg-4">
+                        <div class="nav w-100 nav-pills me-4">
+                            <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-3 active" data-bs-toggle="pill" data-bs-target="#tab-pane-1" type="button">
+                                <h4 class="m-0">Work Experience</h4>
+                            </button>
+                            <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-3" data-bs-toggle="pill" data-bs-target="#tab-pane-2" type="button">
+                                <h4 class="m-0">Community Servant</h4>
+                            </button>
+                            <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-3" data-bs-toggle="pill" data-bs-target="#tab-pane-3" type="button">
+                                <h4 class="m-0">Education</h4>
+                            </button>
+                            <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-3" data-bs-toggle="pill" data-bs-target="#tab-pane-4" type="button">
+                                <h4 class="m-0">Military Service</h4>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="tab-content w-100">
+                            <div class="tab-pane fade show active" id="tab-pane-1">
+                                <div class="row g-2">
+                                        <h3 class="mb-6">Mentor</h3>
+                                        <p class="mb-4">Steve currently serves as Director of External Technical Training at Elizabethtown Community and Technical College where he also teaches business and technical classes. Most recently, he developed the Computer Coding Academy as well as training and development for new organizations moving to the area.  As a college educator, he has a passion for helping people achieve their goals and developing small business. Steve has worked at senior levels in both the automotive and bourbon industries. Being a real estate broker and owing a real estate business Steve understands the challenges that small business face. He is a Human Resources Senior Certified Professional (SCP) and holds a private pilot’s license. Steve has diverse work background that will help him to understand the many different facets needed to be a Representative. </p>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="tab-pane-2">
+                                <div class="row g-2">
+                                        <h3 class="mb-6">Volunteer</h3>
+                                        <p class="mb-4">Steve believes that our community is better when we all work to help and serve those around us.  He has a long history of doing just that. Serving the community, he coached youth soccer for many years helping kids to learn and enjoy the game. He has volunteered for Feeding America. coaching Youth Soccer, and serving on the high school Site Based Council to try to help impact education for our students and teachers. Steve serves as a Constable and has been elected for the last 3 election cycles. Steve passionately serves on the Habitat for Humanity Board of Directors in an effort to help bring the American dream of owning a home to more in our community. </p>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="tab-pane-3">
+                                <div class="row g-2">
+                                        <h3 class="mb-6">Scholar</h3>
+                                        <p class="mb-4">Steve holds two master’s degrees, with one being an Executive Master of Business Administration (EMBA) from Bellarmine University and the other, being a Master of Science from Eastern Kentucky University.  It was at EKU where he also earned a Bachelor of Arts degree. Additionally, Steve also holds two associate technical degrees.  </p>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="tab-pane-4">
+                                <div class="row g-2">
+                                        <h3 class="mb-6">Decorated Veteran</h3>
+                                        <p class="mb-4">Steve’s Military background is extensive with over four years of active duty in the Air Force and over 30 years in the Kentucky Air National Guard, where he presently still serves as a Senior Non-Commissioned Officer. Steve has responded to the call on numerous occasions including on September 11 for homeland defense and Iraqi Freedom. He is a decorated Airman with multiple awards, medals, and citations including one with valor. Steve has experience with both foreign and domestic operations. </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- About End -->
+<!-- Fact Start -->
+@*<div class="container-fluid fact bg-dark my-5 py-5">
+    <div class="container">
+        <div class="row g-4">
+            <div class="col-md-6 col-lg-4 text-center wow fadeIn" data-wow-delay="0.1s">
+                <i class="fa fa-check fa-2x text-white mb-3"></i>
+                <h2 class="text-white mb-2" data-toggle="counter-up">30+</h2>
+                <p class="text-white mb-0">Years Experience</p>
+            </div>
+            <div class="col-md-6 col-lg-4 text-center wow fadeIn" data-wow-delay="0.3s">
+                <i class="fa fa-users fa-2x text-white mb-3"></i>
+                <h2 class="text-white mb-2" data-toggle="counter-up">25+</h2>
+                <p class="text-white mb-0">Official Awards</p>
+            </div>
+            <div class="col-md-6 col-lg-4 text-center wow fadeIn" data-wow-delay="0.5s">
+                <i class="fa fa-car fa-2x text-white mb-3"></i>
+                <h2 class="text-white mb-2" data-toggle="counter-up">60+</h2>
+                <p class="text-white mb-0">Volunteer Projects Completed</p>
+            </div>
+        </div>
+    </div>
+</div>*@
+<!-- Fact End -->
+<!-- Service Start -->
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="row g-4">
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="d-flex py-5 px-4">
+                    <i class="fa fa-award fa-3x text-primary flex-shrink-0"></i>
+                    <div class="ps-4">
+                        <h5 class="mb-3">Military Background</h5>
+                        <p>Served in the US Air Force and currently serves in the Kentucky Air National Guard</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="d-flex py-5 px-4">
+                    <i class="fa fa-briefcase fa-3x text-primary flex-shrink-0"></i>
+                    <div class="ps-4">
+                        <h5 class="mb-3">Business Minded</h5>
+                        <p>Owns a real estate business and served as a broker for many years</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="d-flex py-5 px-4">
+                    <i class="fa fa-people-carry fa-3x text-primary flex-shrink-0"></i>
+                    <div class="ps-4">
+                        <h5 class="mb-3">Community Active</h5>
+                        <p>Serves as a constable in Hardin County and serves on many boards including Habitat for Humanity</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Service End -->
