--- a/Client/wwwroot/css/style.css
+++ b/Client/wwwroot/css/style.css
@@ -215,6 +215,20 @@
     color: #FFFFFF !important;
 }
 
+/* horizontal menu styles */
+@media (max-width: 700px) {
+    .service .nav {
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+    .service .nav .nav-link {
+        flex: 1;
+        text-align: center;
+    }
+}
 
 /*** Booking ***/
 .booking {
