Added contact form and minor style updates

--- a/Client/Pages/AboutPage.razor
+++ b/Client/Pages/AboutPage.razor
@@ -25,9 +25,9 @@
                 </div>
             </div>
             <div class="service col-lg-6">
-                <h6 class="text-primary text-uppercase">// Elect //</h6>
+                <h6 class="text-primary text-uppercase">// Re-Elect //</h6>
                 <h1 class="mb-4"><span class="text-primary">Steve Bratcher</span> for State Rep</h1>
-                <p class="mb-3">Steve Bratcher is a Republican Candidate for Kentucky State House of Representatives in the 25th District. Steve has lived in Elizabethtown with his wife, Cindy, for more than 20 years.  He also is father to two amazing daughters, Tori and Paige. His diversity, experience, and education will help him to be a Representative that makes sound judgements for the people he serves.</p>
+                <p class="mb-3">Steve Bratcher is a Republican Candidate for Kentucky State House of Representatives in the 25th District. Steve has lived in Elizabethtown with his wife, Cindy, for more than 20 years.  He also is father to two amazing daughters, Tori and Paige. His diversity, experience, and education help him to be a Representative that makes sound judgements for the people he serves.</p>
                 <div class="row g-4 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="col-lg-4">
                         <div class="nav w-100 nav-pills me-4">
@@ -50,7 +50,7 @@
                             <div class="tab-pane fade show active" id="tab-pane-1">
                                 <div class="row g-2">
                                         <h3 class="mb-6">Mentor</h3>
-                                        <p class="mb-4">Steve currently serves as Director of External Technical Training at Elizabethtown Community and Technical College where he also teaches business and technical classes. Most recently, he developed the Computer Coding Academy as well as training and development for new organizations moving to the area.  As a college educator, he has a passion for helping people achieve their goals and developing small business. Steve has worked at senior levels in both the automotive and bourbon industries. Being a real estate broker and owing a real estate business Steve understands the challenges that small business face. He is a Human Resources Senior Certified Professional (SCP) and holds a private pilot’s license. Steve has diverse work background that will help him to understand the many different facets needed to be a Representative. </p>
+                                        <p class="mb-4">Steve currently serves as Director of External Technical Training at Elizabethtown Community and Technical College where he also teaches business and technical classes. Most recently, he developed the Computer Coding Academy as well as training and development for new organizations moving to the area.  As a college educator, he has a passion for helping people achieve their goals and developing small business. Steve has worked at senior levels in both the automotive and bourbon industries. Being a real estate broker and owing a real estate business Steve understands the challenges that small business face. He is a Human Resources Senior Certified Professional (SCP) and holds a private pilot’s license. Steve has diverse work background that help him to understand the many different facets needed to be a Representative. </p>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="tab-pane-2">
