--- a/Client/Pages/ContactPage.razor
+++ b/Client/Pages/ContactPage.razor
@@ -1,52 +1,128 @@
 ﻿@page "/contact"
+@using BlazorApp.Shared;
+@using System.Text;
+@using System.Text.Json;
+@using System.Net.Http.Headers;
+@inject HttpClient Http
 
 
 
-<div>
-
-    <div>
-
-        <div>
-            <div>
-
-                <main>
-
-                    <article>
-
-                        <header>
-
-                            <span>February 10, 2022</span>
-
-                            <h1>Contact</h1>
-
-                        </header><!-- .entry-header -->
-
-                        <div>
-
-                            <div>
-                                <section>
-
-                                    <div>
-                                        <div>
-                                            <div>
-                                                <Contact />
-                                            </div>
-                                        </div>
-                                    </div>
-                                </section>
-                            </div>
-
-                        </div><!-- .entry-content -->
-
-
-                    </article><!-- #post-## -->
-
-                </main><!-- #main -->
-
-            </div><!-- #primary -->
-
+<!-- Page Header Start -->
+<div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-bg-1.jpg);">
+    <div class="container-fluid page-header-inner py-5">
+        <div class="container text-center">
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Contact</h1>
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb justify-content-center text-uppercase">
+                    <li class="breadcrumb-item"><a href="/">Home</a></li>
+                    <li class="breadcrumb-item text-white active" aria-current="page">Contact</li>
+                </ol>
+            </nav>
         </div>
-    </div><!-- .container -->
+    </div>
+</div>
+<!-- Page Header End -->
+<!-- Contact Start -->
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+            <h6 class="text-primary text-uppercase">// Contact Me //</h6>
+            <h1 class="mb-5">How Can I Help?</h1>
+        </div>
+        <div class="row g-4">
+            <div class="col-md-6 wow fadeIn" data-wow-delay="0.1s">
+                <iframe class="position-relative rounded w-100 h-100"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3136.057553337137!2d-84.87560380000001!3d38.1853372!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x884274bfb7a4fd8f%3A0x9442644b1c13550d!2s702%20Capital%20Ave%2C%20Frankfort%2C%20KY%2040601!5e0!3m2!1sen!2sus!4v1683171713657!5m2!1sen!2sus"
+                        frameborder="0" style="min-height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
+                        tabindex="0"></iframe>
+            </div>
+            <div class="col-md-6">
+                <div class="wow fadeInUp" data-wow-delay="0.2s">
+                    @if (messageSent)
+                    {
+                        <p class="mb-4">Thank you for your message, I will get back to you as soon as possible.</p>
+                    }
+                    else if (sendingMessage)
+                    {
+                        <p class="mb-4">Sending your message...</p>
+                    }else if (errorSendingMessage)
+                    {
+                        <p class="mb-4">Oops! Something went wrong while sending your message. I apologize for the inconvenience.</p>
+                    }
+                    else{
+                        <p class="mb-4">I am here to serve you, if you need anything or would like to speak your mind, please do not hesitate to do so.</p>
+                        <EditForm Model="@contactMessage" OnValidSubmit="@HandleValidSubmit">
+                            <DataAnnotationsValidator />
+                            <ValidationSummary />
+                            <div class="row g-3">
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <InputText @bind-Value="contactMessage.Name" type="text" class="form-control" id="name" placeholder="Your Name" />
+                                        <label for="name">Your Name</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <InputText @bind-Value="contactMessage.Email" type="email" class="form-control" id="email" placeholder="Your Email" />
+                                        <label for="email">Your Email</label>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-floating">
+                                        <InputText @bind-Value="contactMessage.Subject" type="text" class="form-control" id="subject" placeholder="Subject" />
+                                        <label for="subject">Subject</label>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-floating">
+                                        <InputTextArea @bind-Value="contactMessage.Message" class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></InputTextArea>
+                                        <label for="message">Message</label>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
+                                </div>
+                            </div>
+                        </EditForm>
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Contact End -->
+@code {
+    private ContactMessage contactMessage = new ContactMessage("", "", "", "");
+    private EditContext? editContext;
+    private bool messageSent;
+    private bool sendingMessage;
+    private bool errorSendingMessage;
+    protected override void OnInitialized()
+    {
+        editContext = new(contactMessage);
+    }
+    private async Task HandleValidSubmit(EditContext editContext)
+    {
+        try
+        {
+            sendingMessage = true;
+            var content = new ByteArrayContent(Encoding.UTF8.GetBytes(JsonSerializer.Serialize(editContext.Model)));
+            content.Headers.ContentType = new MediaTypeHeaderValue("application/json");
+            var response = await Http.PostAsync("/api/ContactFunction", content);
+            if (response.IsSuccessStatusCode)
+            {
+                messageSent = true;
+            }
+            else
+            {
+                errorSendingMessage = true;
+            }
+        }
+        catch(Exception)
+        {
+            errorSendingMessage = true;
+        }
 
 
-</div><!-- .site-content -->
+    }
+}
