--- a/Client/Shared/Footer.razor
+++ b/Client/Shared/Footer.razor
@@ -3,17 +3,10 @@
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <div class="d-flex pt-2">
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/profile.php?id=100078539839953"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.youtube.com/watch?v=oKoDRhlHGQE"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/in/steve-bratcher-79552918/"><i class="fab fa-linkedin-in"></i></a>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-            </div>
-            <div class="col-lg-3 col-md-6">
-            </div>
-            <div class="col-lg-3 col-md-6">
             </div>
         </div>
     </div>
@@ -23,7 +16,7 @@
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                     Built by <a class="border-bottom" href="https://ianosborne.dev">Ian Osborne</a>
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    using designs by <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                    using designs from <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <div class="footer-menu">
