--- a/Client/Pages/AboutPage.razor
+++ b/Client/Pages/AboutPage.razor
@@ -49,19 +49,19 @@
                         <div class="tab-content w-100">
                             <div class="tab-pane fade show active" id="tab-pane-1">
                                 <div class="row g-2">
-                                        <h3 class="mb-6">Mentor</h3>
-                                        <p class="mb-4">Steve currently serves as Director of External Technical Training at Elizabethtown Community and Technical College where he also teaches business and technical classes. Most recently, he developed the Computer Coding Academy as well as training and development for new organizations moving to the area.  As a college educator, he has a passion for helping people achieve their goals and developing small business. Steve has worked at senior levels in both the automotive and bourbon industries. Being a real estate broker and owing a real estate business Steve understands the challenges that small business face. He is a Human Resources Senior Certified Professional (SCP) and holds a private pilot’s license. Steve has diverse work background that help him to understand the many different facets needed to be a Representative. </p>
+                                        <h3 class="mb-6">Caring Mentor</h3>
+                                        <p class="mb-4">Steve currently serves as Director of External Technical Training at Elizabethtown Community and Technical College where he also teaches business and technical classes. Most recently, he developed the Computer Coding Academy as well as training and development for new organizations moving to the area.  As a college educator, he has a passion for helping people achieve their goals and developing small business. Steve has worked at senior levels in both the automotive and bourbon industries. Being a real estate broker and owing a real estate business Steve understands the challenges that small business face. He is a Human Resources Senior Certified Professional (SCP) and holds a private pilot’s license. Steve has diverse work background that helps him to understand the many different facets needed to be a Representative. </p>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="tab-pane-2">
                                 <div class="row g-2">
-                                        <h3 class="mb-6">Volunteer</h3>
+                                        <h3 class="mb-6">Active Volunteer</h3>
                                         <p class="mb-4">Steve believes that our community is better when we all work to help and serve those around us.  He has a long history of doing just that. Serving the community, he coached youth soccer for many years helping kids to learn and enjoy the game. He has volunteered for Feeding America. coaching Youth Soccer, and serving on the high school Site Based Council to try to help impact education for our students and teachers. Steve serves as a Constable and has been elected for the last 3 election cycles. Steve passionately serves on the Habitat for Humanity Board of Directors in an effort to help bring the American dream of owning a home to more in our community. </p>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="tab-pane-3">
                                 <div class="row g-2">
-                                        <h3 class="mb-6">Scholar</h3>
+                                        <h3 class="mb-6">Esteemed Scholar</h3>
                                         <p class="mb-4">Steve holds two master’s degrees, with one being an Executive Master of Business Administration (EMBA) from Bellarmine University and the other, being a Master of Science from Eastern Kentucky University.  It was at EKU where he also earned a Bachelor of Arts degree. Additionally, Steve also holds two associate technical degrees.  </p>
                                 </div>
                             </div>
