Issues page initial setup

--- a/Client/Pages/DistrictMapPage.razor
+++ b/Client/Pages/DistrictMapPage.razor
@@ -1,58 +1,11 @@
 ﻿@page "/district-map"
 
 
-<div>
-    <div>
-        <div>
-            <div>
-                <main>
-                    <article>
-                        <header>
-                            <h1>District Map</h1>
-                        </header><!-- .entry-header -->
-                        <div>
-                            <div>
-                                <section>
-                                    <div>
-                                        <div>
-                                            <div>
-                                                <div>
-                                                    <div>
-                                                        <img decoding="async" width="640" height="427" src="https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-1024x683.jpg" class="attachment-large size-large wp-image-260" alt="" loading="lazy" srcset="https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-1024x683.jpg 1024w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-300x200.jpg 300w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-768x512.jpg 768w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-1536x1024.jpg 1536w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-2048x1365.jpg 2048w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-750x500.jpg 750w" sizes="(max-width: 640px) 100vw, 640px">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </section>
-                                <section>
-                                    <div>
-                                        <div>
-                                            <div>
-                                                <div>
-                                                    <div>
-                                                        <p>This is the updated map for the 25th District. For a more personalized look, please go to <a href="https://apps.legislature.ky.gov/findyourlegislator/findyourlegislator.html" data-wpel-link="external" target="_blank" rel="external noopener noreferrer">here</a>.&nbsp;</p>
-                                                    </div>
+<DefaultHeader Title="District Map" Breadcrumb="District Map" />
 
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </section>
-                            </div>
-                        </div><!-- .entry-content -->
-                    </article><!-- #post-## -->
-                </main><!-- #main -->
-            </div><!-- #primary -->
-        </div>
-        <div>
-            <div>
-            </div><!-- #secondary -->
-        </div><!-- .sidebar-wrap -->
-    </div><!-- .container -->
+<img decoding="async" width="640" height="427" src="https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-1024x683.jpg" class="attachment-large size-large wp-image-260" alt="" loading="lazy" srcset="https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-1024x683.jpg 1024w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-300x200.jpg 300w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-768x512.jpg 768w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-1536x1024.jpg 1536w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-2048x1365.jpg 2048w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-750x500.jpg 750w" sizes="(max-width: 640px) 100vw, 640px">
 
-
-</div><!-- .site-content -->
+<p>This is the updated map for the 25th District. For a more personalized look, please go to <a href="https://apps.legislature.ky.gov/findyourlegislator/findyourlegislator.html" data-wpel-link="external" target="_blank" rel="external noopener noreferrer">here</a>.&nbsp;</p>
 
 
 
@@ -63,4 +16,5 @@
 
 
 
-<img src="https://pixel.wp.com/g.gif?v=ext&amp;blog=202994286&amp;post=270&amp;tz=0&amp;srv=stevebratcher.com&amp;j=1%3A12.0&amp;host=stevebratcher.com&amp;ref=&amp;fcp=131&amp;rand=0.6297775681731024" alt="" width="6" height="5" id="wpstats">
+
+
