--- a/Client/Pages/AboutPage.razor
+++ b/Client/Pages/AboutPage.razor
@@ -1,19 +1,6 @@
 ﻿@page "/about"
 
-<div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-bg-1.jpg);">
-    <div class="container-fluid page-header-inner py-5">
-        <div class="container text-center">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Meet Steve</h1>
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb justify-content-center text-uppercase">
-                    <li class="breadcrumb-item"><a href="/">Home</a></li>
-                    <li class="breadcrumb-item text-white active" aria-current="page">About</li>
-                </ol>
-            </nav>
-        </div>
-    </div>
-</div>
-<!-- Page Header End -->
+<DefaultHeader Title="Meet Steve" Breadcrumb="About"/>
 
 <!-- About Start -->
 <div class="container-xxl py-5">
