--- a/Client/wwwroot/css/style.css
+++ b/Client/wwwroot/css/style.css
@@ -269,7 +269,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: var(--primary);
+    background: var(--dark);
+    opacity: .9;
     transform: scale(0);
     transition: .5s;
 }
