Added issues and 404 page

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -14,7 +14,7 @@
                                 <div class="col-10 col-lg-7 text-center text-lg-start">
                                     <h5 class="text-white text-uppercase mb-3 animated slideInDown">RE-ELECT</h5>
                                     <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Steve Bratcher</h1>
-                                    <h6 class="text-white text-uppercase mb-3 animated slideInDown">For the 25th District</h6>
+                                    <h6 class="text-white text-uppercase mb-3 animated slideInDown">For Kentucky's 25th District</h6>
                                     <a href="/about" class="btn btn-primary py-3 px-5 animated slideInDown">Meet Steve</a>
                                     <a href="https://secure.anedot.com/c0435ad2-e0e4-4d49-b7f9-23bf1ee1bf65/donate" class="btn btn-light py-3 px-5 animated slideInDown" style="margin:1rem;">Donate</a>
 
