--- a/Client/App.razor
+++ b/Client/App.razor
@@ -5,7 +5,7 @@
     <NotFound>
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+            <BlazorApp.Client.Pages._404/>
         </LayoutView>
     </NotFound>
 </Router>
