--- a/Client/Shared/Footer.razor
+++ b/Client/Shared/Footer.razor
@@ -8,6 +8,18 @@
                     <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/in/steve-bratcher-79552918/"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
+            <div class="col-lg-3 col-md-6">
+            </div>
+            <div class="col-lg-3 col-md-6">
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h4 class="text-light mb-4">Stay in the Loop</h4>
+                <p>Want to hear from Steve?</p>
+                <div class="position-relative mx-auto" style="max-width: 400px;">
+                    <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
+                    <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Submit</button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="container">
